--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Citiustech</h1>
-    <h2> HI MESSI</h2>
+    <h2> HI MSD</h2>
     <h3> welcome to citius tech </h3>
 </body>
 </html>
